bdr.BDR.scala.error
Erreur de compilation :
BDR:16: error: value i is not a member of Unit
possible cause: maybe a semicolon is missing before `value i'?
 }  i
    ^BDR:17: error: not found: value f
  f (litMessage() == "B" ){
  ^